# dl_ctg

./: .gitignore  Cargo.toml
docs/: Differences in ad.studies.txt
sql/: ad_tables.sql
src/: base_types.rs  err.rs  lib.rs  main.rs
src/data_models/: ctg_api.rs  json_models.rs  mod.rs
src/download/: mod.rs  monitoring.rs  process_study.rs
src/encode/: mod.rs
src/iec/: mod.rs
src/import/: mod.rs
src/setup/: cli_reader.rs  config_reader.rs  log_helper.rs  mod.rs
